thumbnail aspect ration fixed, no longer distorts
git-svn-id: http://svn.matrix.msu.edu/svn/mbira_plugin@96 01706023-bb97-4ce8-ab48-9f15e5b5d7ad

--- a/css/project_all.css
+++ b/css/project_all.css
@@ -13,6 +13,10 @@ img {
     border:none;
 }
 
+.projectImg {
+	object-fit: contain;
+}
+
 @font-face {
     font-family: 'montserratregular';
     src: url('fonts/Montserrat-Regular-webfont.eot');
